@startuml
!include DiagramaClase_Movimiento.puml!SINSUBCLASES

class MovimientoValido{
    + esPosible(): boolean
}
class MovimientoInvalido{
    +  esPosible(): boolean
}

MovimientoValido --|> Movimiento
MovimientoInvalido --|> Movimiento

note right of Movimiento
Al usar ModificadorMovimiento
me rompe la logica del
MovimientoValido
y MovimientoInvalido
end note
@enduml
@startuml(id=SINSUBCLASES)

       'Clase que encapsula la logica de movimientos.
       abstract class Movimiento{
           - cantidad: Integer
           + sumarMovimiento( Movimiento movimientos )
           + descontarMovimiento( Movimiento movimientos )
           + aplicarDescuento( Integer porcentaje)
           + aplicarAumento( Integer porcentaje)
           + {abstract} esPosible(): boolean
       }

@enduml